# claw-my-spark

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yaml
expressvpn/: Dockerfile  entrypoint.sh
forensics-pdf-mcp/: Dockerfile  FORENSIC-PDF-DESIGN.md  README.md  drive_sync.py  http_server.py  image_details.py  job_queue.py  job_worker.py  ollama_client.py  pdf_cache.py  pdf_processor.py  pyproject.toml  requirements.txt
forensics-pdf-mcp/admin/: keygen.py  register_client.py
forensics-pdf-mcp/auth/: __init__.py  key_registry.py  middleware.py  schema.sql  signing.py
forensics-pdf-mcp/client/: forensics_client.py
forensics-pdf-mcp/forensics_pdf_mcp/: __init__.py
forensics-pdf-mcp/forensics_pdf_mcp/client/: __init__.py  forensics_client.py
forensics-pdf-mcp/tests/: conftest.py  test_forensics_client.py  test_http_server.py  test_key_registry.py  test_ollama_client.py  test_pdf_processor.py  test_signing.py
openclaw/: Caddyfile  Dockerfile  entrypoint.sh
