[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forensics-pdf-mcp"
version = "0.1.0"
description = "PDF forensics pipeline client for the DGX Spark MCP server"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["forensics_pdf_mcp*"]
