[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forensics-pdf-mcp"
version = "0.1.0"
description = "PDF forensics pipeline client for the DGX Spark MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "minio>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["forensics_pdf_mcp*"]
